--- a/linters/.eslintrc
+++ b/linters/.eslintrc
@@ -131,6 +131,7 @@
     "eol-last": 2,
     "func-names": 1,
     "indent": [2, 2, {"SwitchCase": 1}],
+    "jsx-quotes": 2,
     "key-spacing": [2, {"beforeColon": false, "afterColon": true}],
     "new-cap": [2, {"newIsCap": true, "capIsNew": false}],
     "no-mixed-spaces-and-tabs": 2,
@@ -161,7 +162,6 @@
     "react/jsx-curly-spacing": [2, "never"],
     "react/jsx-no-duplicate-props": 2,
     "react/jsx-no-undef": 2,
-    "react/jsx-quotes": [2, "double"],
     "react/jsx-sort-prop-types": 0,
     "react/jsx-sort-props": 0,
     "react/jsx-uses-react": 2,
